-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.14.2
-
None
-
-
782710f23604b7437417540c2d44aec06c42f3ba (qt/qtactiveqt/dev) 792046651cf904590d2e6a57253380d4b129b070 (qt/qtactiveqt/5.15)
Given a registered x64 ActiveX control
When I run `dumpcpp "{CLSID}" on the command line
Then an error with message "dumpcpp: type library '' not found" is displayed.

However, it works with x86 versions of the active controls and the tools dumpdoc and testcon have no problems with the x64 version.
After looking at the source code (dumpcpp/main.cpp) this is due to a hard coded "win32" registry subkey at two different places. 64-bit controls are however registered with a "win64" subkey. Changing "win32" to "win64" works.
This problem might affect multiple versions of Qt.
| For Gerrit Dashboard: QTBUG-86666 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 314000,2 | dumpcpp: Check 64 bit registry keys for 64bit builds | dev | qt/qtactiveqt | Status: MERGED | +2 | 0 |
| 314043,2 | dumpcpp: Check 64 bit registry keys for 64bit builds | 5.15 | qt/qtactiveqt | Status: MERGED | +2 | 0 |