dumpcpp: Check 64 bit registry keys for 64bit builds

Add a check depending on pointer size.

Fixes: QTBUG-86666
Change-Id: I6bb39e94e677e9f9c72b15949e7b463e1f4776d2
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 782710f23604b7437417540c2d44aec06c42f3ba)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>